--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 title: devlopr jekyll
 subtitle: A Jekyll Theme built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A Jekyll Theme Built For Developers
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://devlopr.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 author_logo: profile.png
 disqus_shortname: sujay-kundu  #for comments using disqus
