--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://devlopr.netlify.com" # the base hostname & protocol for your site,
 author_logo: profile.png
 disqus_shortname: sujay-kundu  #for comments using disqus
 author: devlopr
-author_bio: Hello, my name is John Doe.I am an award winning Full Stack Web Developer and UI/UX Javascript specialist
+author_bio: devlopr-jekyll is a theme built for developers. Anyone can create a blog like this. Just follow the DOCS.
 author_email: "john@devlopr.com"
 author_location: India
 author_website_url: "https://johndoe.com"
