--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,16 @@
-title: John Doe
-subtitle: Full Stack Web Developer
+title: devlopr
+subtitle: A Jekyll Theme Built For Developers
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll - A Jekyll Theme Built For Developers
+  devlopr-jekyll is a Jekyll Theme Built For Developers
 
+url: "https://devlopr.netlify.com" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://devlopr.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
-
-disqus_shortname: sujay-kundu  #for comments using disqus
 
 urls:
+    - text: Blog
+      url: /
     - text: About Me
       url: /about/
-    - text: My Projects
-      url: /projects/
     - text: Contact Me
       url : /contact/
     - text: Styleguide
@@ -24,7 +22,7 @@ urls:
 
 author_logo: profile.png
 author: John Doe
-author_bio: Hi, My Name is John Doe. I love to Code and Design. 
+author_bio: Hi, My Name is John Doe. I love to Code and Design. devlopr-jekyll is a theme built for developers.  
 author_email: "johndoe@gmail.com"
 author_location: India
 author_website_url: "http://johndoe.com"
@@ -51,8 +49,20 @@ author_education_details:
                 description: Bachelor of Technology
                 visibility: true
 
+author_project_details:
+              - project_thumbnail: gamershub.png
+                project_title: Gamers Hub
+                project_description: A Platform built for Gamers and Game Devs
+                project_url: https://gamershub.in
+                visibility: true
+              - project_thumbnail: programmingebooks.png
+                project_title: Programming Ebooks
+                project_description: A Platform to easily find and read programming books
+                project_url: https://programmingebooks.com
+                visibility: true
+
 # social links
-twitter_username: 
+twitter_username: johndoe
 github_username:  johndoe
 facebook_username: johndoe
 linkedin_username: johndoe
@@ -63,13 +73,19 @@ telegram_username: johndoe
 dribbble_username: johndoe
 flickr_username: johndoe
 
+#for comments using disqus
+disqus_shortname: sujay-kundu  
+
+# syntax highlighter
 markdown: kramdown
 
-google_analytics: UA-46783401-10 # Google Analytics Code 
+# google analytics
+google_analytics: UA-46783401-10 
 
 # Choose what to show ( can be true or false)
 show_author_work_experiences: true
 show_author_education_details: true
+show_author_project_details: true
 
 # dont touch this unless required
 plugins:
@@ -79,10 +95,12 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
 
+# pagination of posts
 paginate: 8
 per_page: 4
 paginate_path: "/page/:num/"
 
+# minify 
 compress_html:
   clippings: all
   comments: ["<!-- ", " -->"]
