--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ urls:
       url: /about
     - text: Contact Me
       url : /contact
+    - text: Search
+      url : /search
     - text: Styleguide
       url: /styleguide
 
@@ -100,7 +102,16 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-feed
-  # - jekyll-archives
+  - jekyll-algolia
+# - jekyll-archives
+
+# algolia search 
+algolia:
+  application_id: D9WA1YKTRQ
+  index_name: blog_posts # You can replace that with whatever name you want
+  files_to_exclude: []
+  nodes_to_index: 'article'
+  search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
 
 # pagination of posts
 paginate: 8
