--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,15 @@ baseurl: "" # the subpath of your site, e.g. /blog
 urls:
     - text: Blog
       url: /blog
+    - text: Shop
+      url : /shop/
     - text: About Me
-      url: /about
+      url: /about/
     - text: Contact Me
-      url : /contact
-    - text: Search
-      url : /search
+      url : /contact/
     - text: Styleguide
-      url: /styleguide
+      url: /styleguide/
+    
 
 # Edit these details 
 
@@ -133,3 +134,27 @@ compress_html:
 #   layout: archive
 #   permalinks:
 #     category: '/category/:name/'
+
+
+collections:
+ - products
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
