--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: John Doe
-subtitle: Web Developer and Designer
+title: devlopr jekyll
+subtitle: A Jekyll theme built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a Jekyll Theme Built For Developers
 
