--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,9 @@ disqus_shortname: sujay-kundu
 # wakatime username (coding activity)
 wakatime_username: sujaykundu777
 
+# mailchimp embedded form url (newsletter):
+mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+
 # formspree (contact form)
 formspree_email: johndoe@gmail.com
 
