--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 github: sujaykundu777
 patreon: sujaykundu
 ko_fi:  sujaykundu
-custom: ["https://www.paypal.me/sujaykundu", sujaykundu.com, "https://www.buymeacoffee.com/sujaykundu"]
+custom: ["https://www.paypal.me/sujaykundu", sujaykundu.com, "https://buymeacoff.ee/sujaykundu"]
