--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 author_logo: profile.png
 author: John Doe
-author_bio: Hello, My Name is John Doe. I love to Code and Design. devlopr-jekyll is a theme built for developers.
+author_bio: Web Designer and Developer
 author_email: "johndoe@gmail.com"
 author_location: India
 author_website_url: "http://johndoe.com"
